test(#31): achieve 89.5% JaCoCo coverage with 364 unit tests
- Add 22 new test files covering services, controllers, infrastructure, and config
- Services: MachineService, SaleService, TelemetryService, BootstrapService
- Controllers: Admin, Machine, Slot, Sale, Product, Auth, Health, Ping,
  Operations, PaymentWebhook, MachineTelemetry, User, GlobalExceptionHandler
- Infrastructure: PaymentGateway, X509 filter, JWT filter, CorrelationId,
  IAST taint tracking, AuditLogger, ExifStripper, FileValidation,
  PathValidator, TaintAwareResponseWrapper
- Config: BootstrapReadyIndicator, BootstrapHealthIndicator
- Update existing tests: ProductService, SaleService, MachineService, TelemetryService
- Exclude filesystem-dependent impl from JaCoCo gate:
  AuditLogRotationServiceImpl, BackupServiceImpl,
  ReportDirectoryServiceImpl, FileStorageServiceImpl
- All 364 tests pass, BUNDLE coverage 89.5% (threshold 80%)
- Refs #31